--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a href="page2.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -93,7 +93,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="texte: La chouette agence est une agence de web design qui aide les entreprises a devenir attractives et visibles sur internet" src="img/title.png" />
+				<h2>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -163,7 +163,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<p class="ancienne-image">Nous travaillons avec beaucoup de clients, <br> voici nos réalisations.</p>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
