--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   gtag('config', 'UA-197945267-1');
 </script>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design">
-    <meta name="description" content="La Chouette Agence est l'agence de web design sur Lyon pour vous aider a realiser tous vos projets">
+    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, logo, creation, illustrations, la chouette agence, ">
+    <meta name="description" content="La Chouette Agence est l'agence de web design sur Lyon pour vous aider a realiser tous vos projets (logo, design global, illustrations, animations, création de site ....) ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -22,11 +22,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
+	<script src="./js/jquery-2.1.0.js" async ></script>
+	<script src="./js/bootstrap.js" async ></script>
+	<script src="./js/blocs.js" async ></script>
+	<script src="./js/jquery.touchSwipe.js" async ></script>
+	<script src="./js/gmaps.js" async ></script>
 
     <title>La Chouette Agence</title>
 
