--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   gtag('config', 'UA-197945267-1');
 </script>
     <meta charset="utf-8">
+	<meta name="robots" content="noindex">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, logo, creation, illustrations, la chouette agence, ">
     <meta name="description" content="La Chouette Agence est l'agence de web design sur Lyon pour vous aider a realiser tous vos projets (logo, design global, illustrations, animations, création de site ....) ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
