essai-annuaires-padding

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   gtag('config', 'UA-197945267-1');
 </script>
     <meta charset="utf-8">
-	<meta name="robots" content="noindex">
+	<meta name="robots" content="index">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, logo, creation, illustrations, la chouette agence, ">
     <meta name="description" content="La Chouette Agence est l'agence de web design sur Lyon pour vous aider a realiser tous vos projets (logo, design global, illustrations, animations, création de site ....) ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -261,7 +261,7 @@
 				<div class="row">
 					<div class="col-sm-4">
 						Partenaires
-							<ul>
+							<ul class="partenaires">
 								<li><a href="voiture.com">voiture.com</a></li>
 								<li><a href="pizza.com">pizza.com</a></li>
 								<li><a href="matoiture.com">matoiture.com</a></li>
@@ -270,7 +270,7 @@
 					</div>
 					<div class="col-sm-4">
 						Annuaires liste 1
-						<ul>
+						<ul class="annuaire1">
 							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
 							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
 							<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
@@ -284,7 +284,7 @@
 					</div>
 					<div class="col-sm-4">
 						Annuaires liste 2
-						<ul>
+						<ul class="annuaire2">
 							<li><a href="betterseo.com">betterseo.com</a></li>
 							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
 							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
