--- a/page2.html
+++ b/page2.html
@@ -11,7 +11,7 @@
   gtag('config', 'UA-197945267-1');
 </script>
     <meta charset="utf-8">
-	<meta name="robot" content="noindex" >
+	<meta name="robot" content="index" >
     <meta name="keywords" content="designer, logo, la chouette agence, web design, Lyon, agence, web, illustrations ">
     <meta name="description" content="Contactez la Chouette Agence, la meilleure agence de web design sur Lyon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
