--- a/index.html
+++ b/index.html
@@ -12,21 +12,20 @@
 </script>
     <meta charset="utf-8">
 	<meta name="robots" content="index">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, logo, creation, illustrations, la chouette agence, ">
     <meta name="description" content="La Chouette Agence est l'agence de web design sur Lyon pour vous aider a realiser tous vos projets (logo, design global, illustrations, animations, création de site ....) ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="compressed.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 	
     
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
+	<script src="./js/jquery-2.1.0.js" ></script>
+	<script src="./js/bootstrap.js" ></script>
+	<script src="./js/blocs.js" async ></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
@@ -63,7 +62,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">Contact</a>
+						<a href="Contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
