essai-modif-code

--- a/index.html
+++ b/index.html
@@ -3,23 +3,17 @@
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-197945267-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-197945267-1');
-</script>
     <meta charset="utf-8">
 	<meta name="robots" content="index">
     <meta name="description" content="La Chouette Agence est l'agence de web design sur Lyon pour vous aider a realiser tous vos projets (logo, design global, illustrations, animations, création de site ....) ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css" media="all">
+	<link rel="stylesheet" type="text/css" href="style.min.css" media="all">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" media="all">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css" media="all">
 
 	
     
@@ -129,7 +123,12 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="texte : avis positif concernant la chouette agence" src="img/citation.png" />
+				<blockquote>
+					<p>"La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à intégrer notre site.
+						Cela nous a aidé à doubler nos ventes en ligne à Lyon."
+					</p>
+					<cite>Maxime Guibard, PDG de A vos fourchettes</cite>
+				</blockquote>
 
 			</div>
 		</div>
