ajout-alt-reseaux

--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<blockquote>
+				<blockquote id="quote" >
 					<p>"La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à intégrer notre site.
 						Cela nous a aidé à doubler nos ventes en ligne à Lyon."
 					</p>
-					<cite>Maxime Guibard, PDG de A vos fourchettes</cite>
+					<cite id="cite" >Maxime Guibard, PDG de A vos fourchettes </cite>
 				</blockquote>
 
 			</div>
@@ -231,22 +231,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-twitter icon-md" alt="lien vers twitter"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-facebook icon-md" alt="lien vers facebook"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md" alt="lien vers reseau"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-instagram icon-md" alt="lien vers instagram"></span></a>
 						</div>
 					</div>
 					
