--- a/index.html
+++ b/index.html
@@ -231,22 +231,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md" alt="lien vers twitter"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-twitter icon-md" ></span> Twitter</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md" alt="lien vers facebook"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-facebook icon-md" ></span> Facebook</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md" alt="lien vers reseau"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md" ></span> Reseau</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md" alt="lien vers instagram"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span> Instagram</a>
 						</div>
 					</div>
 					
