--- a/Contact.html
+++ b/Contact.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css" media="all">
-	<link rel="stylesheet" type="text/css" href="style.css" media="all">
+	<link rel="stylesheet" type="text/css" href="style.min.css" media="all">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" media="all">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css" media="all">
 	
