--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="robots" content="index">
     <meta name="description" content="La Chouette Agence est l'agence de web design sur Lyon pour vous aider a realiser tous vos projets (logo, design global, illustrations, animations, création de site ....) ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css" media="all">
 	<link rel="stylesheet" type="text/css" href="style.min.css" media="all">
