--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
 	<meta name="robot" content="index" >
     <meta name="description" content="Contactez la Chouette Agence, la meilleure agence de web design sur Lyon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css" media="all">
 	<link rel="stylesheet" type="text/css" href="style.min.css" media="all">
